Feat: Adicionado primeiro teste no controller
